--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.6",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.0",
