--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
         "keen-slider": "^6.8.6",
         "lucide-react": "^0.525.0",
         "motion": "^12.23.0",
-        "next": "15.3.5",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "next": "^15.3.5",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-icons": "^5.5.0",
         "react-modal": "^3.16.3",
         "swiper": "^11.2.10",
