--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-dom": "^19.1.1",
         "react-icons": "^5.5.0",
         "react-modal": "^3.16.3",
+        "slugify": "^1.6.6",
         "swiper": "^11.2.10",
         "tailwind-merge": "^3.3.1"
     },
